new-task-button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 id="checkbox1">Lista de Tareas de Mudanza</h2>
+        <h2 >Lista de Tareas de Mudanza</h2>
         <form id="taskForm">
           <label>
             <input type="checkbox" name="task1" value="task1">
@@ -30,9 +30,9 @@
             <button value="edit">Edit</button>
             <button value="delete">Delete</button>
           </label>
-    
-          <button type="submit">Guardar Tareas</button>
+          <!-- <button type="submit">Guardar Tareas</button> -->
         </form>
+        <button id="button-new-task">New Task</button>
       </div>
       <script src="script.js"></script>
 </body>
