local-storage-add-but-not-working

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         <h2 >Lista de Tareas de Mudanza</h2>
         <form id="taskForm">
           <label>
-            <input type="checkbox" name="task1" value="task1">
+            <input type="checkbox">
             <input type="text" value="task1">
             <button value="edit">Edit</button>
             <button value="delete">Delete</button>
           </label>
     
           <label>
-            <input type="checkbox" name="task2" value="task2">
+            <input type="checkbox">
             <input type="text" value="task2">
             <button value="edit">Edit</button>
             <button value="delete">Delete</button>
           </label>
     
           <label>
-            <input type="checkbox" name="task3" value="task3">
+            <input type="checkbox">
             <input type="text" value="task3">
             <button value="edit">Edit</button>
             <button value="delete">Delete</button>
@@ -33,6 +33,7 @@
           <!-- <button type="submit">Guardar Tareas</button> -->
         </form>
         <button id="button-new-task">New Task</button>
+        <button id="button-save-tasks">Save Tasks</button>
       </div>
       <script src="script.js"></script>
 </body>
